--- a/styles/style.css
+++ b/styles/style.css
@@ -158,4 +158,7 @@
   line-height: 20px;
   color: #838383;
   margin-top: auto;
+  margin-bottom: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
