--- a/styles/style.css
+++ b/styles/style.css
@@ -158,7 +158,7 @@
   line-height: 20px;
   color: #838383;
   margin-top: auto;
-  margin-bottom: auto;
-  margin-left: auto;
-  margin-right: auto;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
