--- a/styles/style.css
+++ b/styles/style.css
@@ -157,8 +157,5 @@
   font-size: 14px;
   line-height: 20px;
   color: #838383;
-  margin-top: auto;
-  margin-bottom: 10px;
-  margin-left: 10px;
-  margin-right: 10px;
+  margin: auto auto 0;
 }
