--- a/styles/style.css
+++ b/styles/style.css
@@ -287,3 +287,111 @@
   font-size: 14px;
   margin: 0;
 }
+.membership {
+  padding: 100px 0 140px;
+  background-color: #057bf2;
+  color: #ffffff;
+}
+
+.membership__title {
+  max-width: 574px;
+  margin: 0 auto;
+  text-align: center;
+  font-size: 44px;
+  font-weight: 500;
+  line-height: 52px;
+}
+
+.membership__steps {
+  list-style-type: none;
+  padding: 0;
+  margin: 100px 0 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+}
+
+.step {
+  flex-basis: 220px;
+  text-align: center;
+}
+
+.step__title {
+  margin: 0;
+  font-size: 20px;
+  line-height: 30px;
+  font-weight: 700;
+  display: flex;
+  align-items: center;
+}
+
+.step__icon {
+  margin-left: 20px;
+}
+
+.step__description {
+  margin: 10px 0 0;
+}
+
+.footer {
+  box-sizing: border-box;
+  background-color: #1f1f1f;
+  color: white;
+  padding: 60px 80px;
+  font-size: 16px;
+}
+
+.footer__columns {
+  position: relative;
+}
+.footer__column {
+  position: absolute;
+}
+
+.footer__column_content_hours {
+  align-items: flex-start;
+  right: 256.1px;
+}
+
+.footer__column_content_social {
+  right: 0;
+}
+
+.footer__logo {
+  max-width: 58px;
+  max-height: 80px;
+}
+
+.footer__column-heading {
+  margin-top: 0;
+  margin-bottom: 20px;
+}
+
+.footer__list {
+  /* El siguiente código elimina los estilos predeterminados del navegador para las listas */
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.footer__list-item {
+  margin-bottom: 16px;
+  display: flex;
+  align-items: center;
+}
+
+.footer__column-link {
+  text-decoration: none;
+  margin-left: 10px;
+  color: white;
+}
+
+.footer__social-icon {
+  max-width: 16px;
+  max-height: 16px;
+}
+
+.footer__copyright {
+  margin-top: 180px;
+}
